hphp/hack/test/typecheck/isarray/is_array_bad.php.like_types.exp
File "is_array_bad.php", line 6, characters 12-13:
Invalid return type (Typing[4110])
File "is_array_bad.php", line 4, characters 35-56:
Expected ~varray_or_darray<int> because it is an unenforceable type
File "is_array_bad.php", line 5, characters 7-14:
But got varray_or_darray<T#1> from the argument to this \is_array test
File "is_array_bad.php", line 13, characters 10-11:
Invalid return type (Typing[4110])
File "is_array_bad.php", line 11, characters 41-56:
Expected ~darray<int, int> because it is an unenforceable type
File "is_array_bad.php", line 12, characters 13-20:
But got varray_or_darray<T#1> from the argument to this \is_array test
File "is_array_bad.php", line 18, characters 10-11:
Invalid return type (Typing[4110])
File "is_array_bad.php", line 16, characters 41-54:
Expected ~varray<string> because it is an unenforceable type
File "is_array_bad.php", line 17, characters 13-20:
But got varray_or_darray<T#1> from the argument to this \is_array test
File "is_array_bad.php", line 23, characters 10-11:
Invalid return type (Typing[4110])
File "is_array_bad.php", line 21, characters 27-40:
Expected ~varray<string> because it is an unenforceable type
File "is_array_bad.php", line 22, characters 13-20:
But got varray_or_darray<T#1> from the argument to this \is_array test
File "is_array_bad.php", line 28, characters 10-11:
Invalid return type (Typing[4110])
File "is_array_bad.php", line 26, characters 27-45:
Expected ~darray<int, string> because it is an unenforceable type
File "is_array_bad.php", line 27, characters 13-20:
But got varray_or_darray<T#1> from the argument to this \is_array test
